Table users {
  id uuid pk
  email varchar(254) [not null, unique, note: "RFC 3696: 254 character practical limit for email addresses"]
  first_name varchar(256) [not null]
  last_name varchar(256)
  profile_pic text [note: "the location of the profile picture"]
  tz varchar(40) [not null, note: "IANA timezone identifier (e.g., America/Toronto), auto-derived from device"]
  base_currency char(3) [not null, ref: > currencies.id, note: "mandatory base currency for aggregate views and FX conversion"]
  created_at timestamptz [not null]
}

Table groups {
  id uuid pk
  owner_id uuid [not null, ref: > users.id]
  name text
  profile_pic text [note: "the location of the profile picture"]
  is_archived boolean [not null, default: false, note: "hidden from default list but data preserved"]
  created_at timestamptz [not null]
}

Table group_members {
  group_id uuid pk [ref: > groups.id, delete: cascade]
  user_id uuid pk [ref: > users.id]
  is_admin boolean [not null, default: false, note: "only the owner can promote/demote admins"]
}

enum permission_level {
  read
  write
  admin
}

Table account_permissions [note: "per-account access for group members; admins have implicit full access"] {
  id uuid pk
  group_id uuid [not null, ref: > groups.id, note: "ON DELETE CASCADE"]
  user_id uuid [not null, ref: > users.id]
  account_id uuid [not null, ref: > accounts.id, note: "ON DELETE CASCADE"]
  level permission_level [not null]
  created_at timestamptz [not null]

  indexes {
    (group_id, user_id, account_id) [unique, name: "uq_account_perm_member_account"]
  }
}

Table budget_permissions [note: "per-base-budget access for group members; admins have implicit full access; independent of account permissions — read grants aggregated utilization without exposing individual transactions"] {
  id uuid pk
  group_id uuid [not null, ref: > groups.id, note: "ON DELETE CASCADE"]
  user_id uuid [not null, ref: > users.id]
  base_budget_id uuid [not null, ref: > base_budgets.id, note: "ON DELETE CASCADE"]
  level permission_level [not null]
  created_at timestamptz [not null]

  indexes {
    (group_id, user_id, base_budget_id) [unique, name: "uq_budget_perm_member_base_budget"]
  }
}

// Only supporting passwords for now
enum auth_provider {
  password
  // google
  // github
  // generic_oidc [note: "to accomodate self hosted solutions like Authentik, Gitea, etc."]
}

Table auth_identities {
  id uuid pk
  user_id uuid [ref: > users.id]
  auth_provider auth_provider [not null]
  email_verified boolean [not null, default: false]
  email_verified_at timestamptz
  // unique constraint: (user_id, auth_provider)
}

Table password_credentials {
  user_id uuid pk [ref: - users.id]
  password_hash text [not null]
  password_algo varchar(32) [not null]
  updated_at timestamptz [not null]
  failed_attempt_count int [not null, default: 0, note: "should be zeroed out once user successfully authenticate"]
  locked_until timestamptz [default: null, note: "used to lock the user's account after too many failed attempts"]
}

enum institution_status {
  canonical
  pending
}

Table institutions [note: "globally available table"] {
  id uuid pk
  status institution_status [not null, default: "pending"]
  name varchar(256) [not null]
  country_code char(2) [not null]
  website text [not null]
  logo_url text

  indexes {
    (name, country_code) [unique, name: "uq_institution_name_country"]
  }
}

Table currencies {
  id char(3) pk
  name varchar(64) [not null, note: "spelled out full term in singular (e.g., Canadian Dollar)"]
  symbol varchar(8) [not null]
  minor_unit_exponent smallint [not null, note: "e.g., CAD=2, JPY=0, BHD=3"]
}

enum tax_treatment {
  taxable [note: "e.g., checking, savings, investment"]
  tax_free [note: "e.g., TFSA, Roth IRA, FHSA"]
  tax_deferred [note: "e.g., RRSP, 401k, traditional IRA"]
  tax_assisted [note: "e.g., RESP — grants/matching, taxed on withdrawal in beneficiary's hands"]
}

enum account_kind {
  asset
  liability
}

enum account_type {
  // Asset subtypes
  checking
  savings
  term_deposit
  cash
  investment
  // Liability subtypes
  credit_card
  line_of_credit
  heloc
  loan
  mortgage
}

Table accounts [note: "check constraint: exactly one of owner_id or group_id must be non-null"] {
  id uuid pk
  owner_id uuid [ref: > users.id]
  group_id uuid [ref: > groups.id, delete: cascade]
  account_kind account_kind [not null, note: "validated against account_type"]
  account_type account_type [not null]
  tax_advantaged_category_id uuid [ref: > tax_advantaged_categories.id, note: "ON DELETE SET NULL"]
  name varchar(256) [not null]
  institution_id uuid [ref: > institutions.id]
  currency char(3) [not null, ref: > currencies.id]
  credit_limit bigint [note: "liability accounts only; null on assets"]
  is_hidden boolean [not null, default: false]
  closed_at timestamptz [note: "null = active; non-null = closed on this date"]
  created_at timestamptz [not null]
}

Table account_balance_snapshots [note: "end-of-day balance records; backend-maintained from transactions, one row per (account, day) with activity; ts is always midnight UTC of the day"] {
  account_id uuid pk [ref: > accounts.id, note: "ON DELETE CASCADE"]
  balance bigint [not null, note: "end-of-day balance in currency base units"]
  ts timestamptz pk [not null, note: "midnight UTC of the snapshot's day"]
}

Table tax_advantaged_categories [note: "individual-owned limit trackers; group_id adds household context, not pooled ownership"] {
  id uuid pk
  category_owner_user_id uuid [not null, ref: > users.id, note: "individual owner whose limits this category tracks; ON DELETE CASCADE"]
  group_id uuid [ref: > groups.id, note: "ON DELETE CASCADE"]
  name varchar(256) [not null]
  tax_treatment tax_treatment [not null, note: "must be non-taxable"]
  currency char(3) [not null, ref: > currencies.id]
  lifetime_contribution_limit bigint [note: "lifetime cap in minor units; null if not applicable"]
  accrued_contributions bigint [not null, default: 0]
  created_at timestamptz [not null]
}

Table tax_advantaged_category_limits {
  tax_advantaged_category_id uuid pk [not null, ref: > tax_advantaged_categories.id, note: "ON DELETE CASCADE"]
  year smallint pk [not null]
  contribution_limit bigint [not null, note: "annual contribution limit in category currency base units"]
  withdrawal_limit bigint [note: "annual withdrawal limit; null means no limit"]
  accrued_contributions bigint [not null, default: 0]
  accrued_withdrawals bigint [not null, default: 0]
}

enum category_kind {
  expense
  income
  transfer
}

Table categories [note: "any group member can create; only admins can edit/delete. App seeds a default 'Uncategorized' category per kind per user so category_id on transactions is never null"] {
  id uuid pk
  group_id uuid [ref: > groups.id, delete: cascade]
  owner_id uuid [not null, ref: > users.id, note: "creator of the category"]
  name text [not null]
  kind category_kind [not null]
  parent_id uuid [ref: > categories.id]
  created_at timestamptz [not null]

  indexes {
    (owner_id, name, kind) [unique, name: "uq_category_owner_name_kind"]
    (group_id, name, kind) [unique, name: "uq_category_group_name_kind"]
  }
}

Table merchants [note: "per-user merchant registry; any group member can create, only admins can edit/delete"] {
  id uuid pk
  owner_id uuid [not null, ref: > users.id, note: "creator of the merchant"]
  group_id uuid [ref: > groups.id, note: "ON DELETE CASCADE; non-null for group-shared merchants"]
  name varchar(256) [not null]
  default_category_id uuid [ref: > categories.id, note: "auto-categorization hint for new transactions with this merchant"]
  created_at timestamptz [not null]

  indexes {
    (owner_id, name) [unique, note: "partial: WHERE group_id IS NULL"]
    (group_id, name) [unique, note: "group-level dedup"]
  }
}

Table transactions [note: "acts as a ledger: positive amount = money in, negative = money out; transfers are two independent rows"] {
  id uuid pk
  created_by_user_id uuid [not null, ref: > users.id]
  account_id uuid [not null, ref: > accounts.id, note: "ON DELETE CASCADE"]
  ts timestamptz [not null]
  merchant_id uuid [ref: > merchants.id, note: "null for transfers between own accounts"]
  category_id uuid [not null, ref: > categories.id]
  amount bigint [not null, note: "minor units of the parent account's currency (e.g. cents); positive = inflow, negative = outflow. The frontend pre-converts foreign-currency receipts before posting"]
  currency char(3) [not null, ref: > currencies.id, note: "the original receipt currency, kept as metadata; defaults to the account's currency"]
  fx_rate numeric [default: null, note: "metadata: exchange rate between `currency` and the **parent account's** currency at the time of the transaction (NOT the user's base currency — these may differ when the user holds accounts in other currencies). Used only by the frontend to display the original foreign-currency value. The backend never re-applies it (snapshots, totals, and reports use `amount` as-is). Frontend defaults to 1.0"]
  notes text [note: "user-provided notes for context or analysis"]
  created_at timestamptz [not null, note: "when the transaction was entered into the system"]
  updated_at timestamptz [not null, note: "tracks last modification; useful for sync and conflict resolution"]
}

Table tags [note: "tag registry for cross-cutting transaction analysis beyond categories; supports personal and group scopes"] {
  id uuid pk
  owner_id uuid [not null, ref: > users.id, note: "creator"]
  group_id uuid [ref: > groups.id, note: "ON DELETE CASCADE; non-null for group tags"]
  name varchar(64) [not null]
  created_at timestamptz [not null]

  indexes {
    (owner_id, name) [unique, note: "partial: WHERE group_id IS NULL"]
    (group_id, name) [unique, name: "uq_tag_group_name"]
  }
}

Table transaction_tags [note: "junction table instead of a tags column on transactions — enables indexed joins for tag queries, single-row renames, and consistent tag naming across transactions"] {
  transaction_id uuid pk [ref: > transactions.id]
  tag_id uuid pk [ref: > tags.id]
}

enum recurrence_freq {
  weekly
  monthly
  yearly
}

Table base_budgets [note: "long-lived spending plan; holds name, currency, cadence, tracked categories, and permissions. Per-period caps and date ranges live on child budgets so historical periods stay frozen when the base is edited. Cadence fields (recurrence_freq, instance_length, recurrence_weekday, recurrence_dom, recurrence_month) are immutable after creation. CHECK: exactly one of owner_id or group_id must be non-null"] {
  id uuid pk
  owner_id uuid [ref: > users.id]
  group_id uuid [ref: > groups.id, delete: cascade]
  name varchar(256) [not null]
  currency char(3) [not null, ref: > currencies.id]
  recurrence_freq recurrence_freq [not null, note: "weekly, monthly, or yearly — defines the alignment unit"]
  instance_length smallint [not null, default: 1, note: "how many freq-units per instance (1 = one week/month/year, 3 = quarterly, etc.); CHECK > 0"]
  recurrence_weekday smallint [note: "0=Mon..6=Sun; required iff freq=weekly, null otherwise; CHECK 0-6"]
  recurrence_dom smallint [note: "1..31, day of month the budget rotates on; required iff freq in (monthly, yearly), null otherwise. If the month has fewer days, falls back to last day; CHECK 1-31"]
  recurrence_month smallint [note: "1..12, month the budget rotates on; required iff freq=yearly, null otherwise; CHECK 1-12"]
  recurs boolean [not null, default: false, note: "true = frontend auto-suggests creating the next instance; false = one-off"]
  created_at timestamptz [not null]
}

Table budgets [note: "per-period instance of a base_budget. period_start is user-provided (must align with the base's cadence); period_end is computed from the base's cadence settings. Only overall_limit is editable after creation"] {
  id uuid pk
  base_budget_id uuid [not null, ref: > base_budgets.id, note: "ON DELETE CASCADE"]
  period_start date [not null, note: "must align with the base's cadence (first of month, matching weekday, etc.)"]
  period_end date [not null, note: "computed from base cadence; CHECK period_end >= period_start"]
  overall_limit bigint [not null, note: "spending cap across all categories, stored in the parent base_budget's currency units; CHECK > 0"]
  created_at timestamptz [not null]

  indexes {
    (base_budget_id, period_start, period_end) [unique, name: "uq_budget_base_period"]
  }
}

Table budget_tracked_categories [note: "tracks which categories a base_budget monitors and when; the added_at/removed_at pair lets the utilization query reconstruct the tracked set as of any instance's period_end, so editing the base does not rewrite historical period totals"] {
  id uuid pk
  base_budget_id uuid [not null, ref: > base_budgets.id, note: "ON DELETE CASCADE"]
  category_id uuid [not null, ref: > categories.id]
  added_at timestamptz [not null, note: "when this category started being tracked"]
  removed_at timestamptz [note: "null = still active; set when unlinked. Partial unique index on (base_budget_id, category_id) WHERE removed_at IS NULL allows multiple historical rows but at most one active row per (base, category) — supports re-add after remove with a clean audit trail"]
}
